--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   </div>
 
   <div class="contatoWpp">
-    <a href="">Ou entre em contato pelo WhatsApp</a>
-    <img src="./whatsapp.png" alt="">
+    <a href="https://wa.me/554774006615" target="_blank">Ou entre em contato pelo WhatsApp</a>
+    <img src="./whatsapp.png">
   </div>
 </body>
 
