--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
           <div class="col-2">
             <div class="input-wrapper">
-              <label for="email">Email <span>(digite um email válido)</span></label>
-              <input type="email" id="email">
+              <label for="numero">Número de celular <span>(digite um número válido)</span></label>
+              <input type="number" id="numero">
             </div>
 
       </fieldset>
@@ -61,19 +61,15 @@
 
         <div class="col-2">
           <div class="input-wrapper">
-            <label for="valor">Digite aqui o valor</label>
             <input type="number" id="valor">
           </div>
       </fieldset>
 
-
-    </form>
-
-    <footer>
       <button form="form" class="button" type="submit">
         Solicitar contato
       </button>
-    </footer>
+
+    </form>
 
   </div>
 
@@ -84,3 +80,4 @@
 </body>
 
 </html>
+   
