--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <div class="page">
 
     <header>
-      <h1>Formúlario de cadastro: Consórcio Credfácil</h1>
-      <p>Preencha o formulário abaixo para fornecer seus dados a Credfácil Consórcios.</p>
+      <h1>Formúlario de cadastro</h1>
+      <p>Preencha o formulário abaixo para entrarmos em contato.</p>
     </header>
     <form id="form">
       <fieldset>
