--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
     </header>
     <form id="form">
       <fieldset>
-        <legend>Informações pessoais</legend>
-
         <div class="col-1">
           <div class="input-wrapper">
             <label for="name">Nome</label>
@@ -49,8 +47,7 @@
               <option value="">Veículo</option>
               <option value="">Casa</option>
               <option value="">Caminhão</option>
-              <option value="">Maquinário</option>
-              <option value="">Agrícola</option>
+              <option value="">Maquinário agrícola</option>
               <option value="">Outro</option>
             </select>
           </div>
