--- a/index.html
+++ b/index.html
@@ -17,22 +17,26 @@
 
 <body>
   <div class="page">
+    <div class="logo">
+      <img src="./images/credfacil-branca-640w.png" alt="">
+    </div>
 
     <header>
-      <h1>Formúlario de cadastro</h1>
-      <p>Preencha o formulário abaixo para entrarmos em contato.</p>
+      <h1>Formúlario para contato</h1>
+      <p>Preencha o formulário abaixo entrarmos em contato.</p>
     </header>
     <form id="form">
       <fieldset>
+
         <div class="col-1">
           <div class="input-wrapper">
-            <label for="name">Nome</label>
+            <label for="name">Nome completo</label>
             <input type="text" id="name">
           </div>
 
           <div class="col-2">
             <div class="input-wrapper">
-              <label for="numero">Número de celular <span>(digite um número válido)</span></label>
+              <label for="numero">Número de celular <span>(digite o número com DDD)</span></label>
               <input type="number" id="numero">
             </div>
 
@@ -47,7 +51,8 @@
               <option value="">Veículo</option>
               <option value="">Casa</option>
               <option value="">Caminhão</option>
-              <option value="">Maquinário agrícola</option>
+              <option value="">Maquinário</option>
+              <option value="">Agrícola</option>
               <option value="">Outro</option>
             </select>
           </div>
@@ -77,4 +82,3 @@
 </body>
 
 </html>
-   
