--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
 <body>
   <div class="page">
-    <div class="logo">
-      <img src="./images/credfacil-branca-640w.png" alt="">
-    </div>
-
     <header>
-      <h1>Formúlario para contato</h1>
+
+      <div class="logo">
+        <img src="./images/credfacil-branca-640w.png" alt="">
+      </div>
+
+
+      <h1>Formulário para contato</h1>
       <p>Preencha o formulário abaixo entrarmos em contato.</p>
     </header>
     <form id="form">
