--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
     <img src="./images/whatsapp.png" alt="">
   </div>
 
+  <footer>
+    <p>© 2023
+      Todos os direitos reservados | CredFácil Rio do Sul.</p>
+  </footer>
 </body>
 
 </html>
