--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>FORMULÁRIO PARA CONTATO</h1>
     <p>Preencha o formulário abaixo entramos em contato.</p>
   </header>
-  <form>
+  <form method="post">
     <label for="name">NOME COMPLETO</label>
     <input type="text" name="name" id="name">
 
