--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -47,7 +47,7 @@
 
   <div class="whatsapp">
     <a href="wa.me/5547">OU ENTRE EM CONTATO PELO WHATSAPP</a>
-    <img src="./images/whatsapp.png" alt="">
+    <img src="./images/whatsapp.png">
   </div>
 
   <footer>
