--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -46,7 +46,7 @@
   </form>
 
   <div class="whatsapp">
-    <a href="wa.me/5547">OU ENTRE EM CONTATO PELO WHATSAPP</a>
+    <a href="https://wa.me/554774006615" target="_blank">OU ENTRE EM CONTATO PELO WHATSAPP</a>
     <img src="./images/whatsapp.png">
   </div>
 
