--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </form>
 
   <div class="whatsapp">
-    <a href="https://wa.me/554774006615" target="_blank">OU ENTRE EM CONTATO PELO WHATSAPP</a>
+    <a href="https://api.whatsapp.com/send?phone=5547974006615&text=%5BC10%5D%20Ol%C3%A1,%20gostaria%20de%20conversar%20com%20um%20especialista%20em%20cons%C3%B3rcio." target="_blank">OU ENTRE EM CONTATO PELO WHATSAPP</a>
     <img src="./images/whatsapp.png">
   </div>
 
